--- a/.github/workflows/check-insecure.yml
+++ b/.github/workflows/check-insecure.yml
@@ -13,4 +13,4 @@ jobs:
         run: npm install
       - name: npm audit
         working-directory: insecure
-        run: npm audit --json > ./npm-audit.json
+        run: npm audit
